--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,14 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-inner-image-zoom": "^3.0.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.14"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.14",
+    "swiper": "^11.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
