--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,7 @@ JWT_SECRET=your_jwt_secret_key
 JWT_SECRET=your-secret-key
 
 # Cấu hình cho môi trường lưu trữ hình
-PORT=5000
+PORT=5001
 
 CLOUDINARY_CLOUD_NAME=div27nz1j
 CLOUDINARY_API_KEY=697513279767123
@@ -19,9 +19,10 @@ EMAIL_USER=miatomo004@gmail.com
 EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmail
 JWT_SECRET=your-secret-key
 
+JWT_SECRET=your-secret-key-here
 
 # Optional: Environment configuration
 NODE_ENV=development
 
 
-REACT_APP_API_URL=http://localhost:5000/api
+REACT_APP_API_URL=http://localhost:5001/api
