--- a/backend/.env
+++ b/backend/.env
@@ -22,6 +22,10 @@ CLOUDINARY_URL=cloudinary://697513279767123:uE1QfcNNLJniX_6IlexfU72420g@dsosczr7
 
 
 EMAIL_USER=miatomo004@gmail.com
+# EMAIL_PASS=ksea qcnw dedk 7dr5 # Mật khẩu ứng dụng 16 ký tự từ Gmail
+
+
+
 EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmail
 # JWT_SECRET=your-secret-key
 
