--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,15 +21,19 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-inner-image-zoom": "^3.0.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "react-slick": "^0.30.3",
+    "react-tag-input": "^6.10.3",
+    "react-tagsinput": "^3.20.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.1"
