--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,10 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-chat-elements": "^12.0.17",
+    "react-chat-window": "^1.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
