--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.2.0",
     "fuse.js": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
