--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,7 @@ MONGO_URI=mongodb+srv://miavn9x:soDNVFRg2LMmwYFt@mia.2hwgj.mongodb.net/thiweb?re
 plaintext
 JWT_SECRET=your_jwt_secret_key
 JWT_SECRET=your-secret-key
+JWT_SECRET=mysupersecretkey
 
 # Cấu hình cho môi trường lưu trữ hình
 PORT=5001
