--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,12 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "serve": "^14.2.4",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "type": "commonjs"
 }
