--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-slick": "^0.30.3",
     "react-tag-input": "^6.10.4",
     "react-tagsinput": "^3.20.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
