--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
