--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.10.0",
     "react-slick": "^0.30.3",
     "react-tag-input": "^6.10.4",
@@ -71,10 +71,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   },
-  "proxy": "http://localhost:5001"
+  "proxy": "http://localhost:5001",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+
 }
