--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
-    "build": "npm install && npm install --prefix ../frontend && npm run build  --prefix ../frontend"
+    "start": "npx cross-env NODE_ENV=production node server.js",
+    "build": "npm install --prefix ../backend && npm install --prefix ../frontend && npm run build  --prefix ../frontend"
   },
   "keywords": [],
   "author": "",
