--- a/backend/.env
+++ b/backend/.env
@@ -35,7 +35,7 @@ EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmai
 # JWT_SECRET=your-secret-key-here
 
 # Optional: Environment configuration
-NODE_ENV=development
+NODE_ENV=production
 
 
 REACT_APP_API_URL=http://localhost:5001/api
