--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 MONGO_URI=mongodb+srv://miavn9x:soDNVFRg2LMmwYFt@mia.2hwgj.mongodb.net/thiweb?retryWrites=true&w=majority
 
 # Secret key for JWT
-plaintext
+# plaintext
 JWT_SECRET=your_jwt_secret_key
 JWT_SECRET=your-secret-key
 JWT_SECRET=mysupersecretkey
@@ -17,25 +17,17 @@ CLOUDINARY_URL=cloudinary://697513279767123:uE1QfcNNLJniX_6IlexfU72420g@dsosczr7
 
 # AI_STUDIO_API_KEY=AIzaSyBMTjQ_BlBVTWtUzywEyWoZdu_oqucF8cs
 # AI_STUDIO_API_URL=https://aistudio.google.com/api/v1/analyze
-
-
 # GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 GEMINI_API_KEY=AIzaSyA8ZdxnE6tYPK7LIxxxxxxxxxxuU3I
 
 
-
 EMAIL_USER=miatomo004@gmail.com
 
-
-
-
 EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmail
-# JWT_SECRET=your-secret-key
 
-# JWT_SECRET=your-secret-key-here
 
 # Optional: Environment configuration
-NODE_ENV=production
+NODE_ENV=development
 
 
 REACT_APP_API_URL=http://localhost:5001/api
