--- a/backend/.env
+++ b/backend/.env
@@ -27,7 +27,7 @@ EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmai
 
 
 # Optional: Environment configuration
-NODE_ENV=development
+NODE_ENV=production
 
 
 REACT_APP_API_URL=http://localhost:5001/api
