--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
+    "backend": "file:",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
