--- a/backend/.env
+++ b/backend/.env
@@ -15,7 +15,7 @@ CLOUDINARY_API_KEY=697513279767123
 CLOUDINARY_API_SECRET=uE1QfcNNLJniX_6IlexfU72420g
 CLOUDINARY_URL=cloudinary://697513279767123:uE1QfcNNLJniX_6IlexfU72420g@dsosczr7j
 
-
+REACT_APP_TINYMCE_API_KEY=8t813kgqzmwjgis1zt15s0ez32c6qagtx9ikfwwfusk0nj9j
 
 EMAIL_USER=miatomo004@gmail.com
 
