--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,30 @@
 
+# MongoDB connection string
+MONGO_URI=mongodb+srv://miavn9x:soDNVFRg2LMmwYFt@mia.2hwgj.mongodb.net/thiweb?retryWrites=true&w=majority
+
+# Secret key for JWT
+# plaintext
+JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=your-secret-key
+JWT_SECRET=mysupersecretkey
+
+# Cấu hình cho môi trường lưu trữ hình
+PORT=5001
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_URL=cloudinary://:@
+
+REACT_APP_TINYMCE_API_KEY=
+
+EMAIL_USER=
+
+EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmail
+
+
+# Optional: Environment configuration
+NODE_ENV=production
+
+
+REACT_APP_API_URL=http://localhost:5001/api
