--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+
 # MongoDB connection string
 MONGO_URI=
 
@@ -9,17 +10,17 @@ JWT_SECRET=mysupersecretkey
 # Port chạy server
 PORT=5001
 
-CLOUDINARY_CLOUD_NAME=dsosczr7j
-CLOUDINARY_API_KEY=697513279767123
-CLOUDINARY_API_SECRET=uE1QfcNNLJniX_6IlexfU72420g
-CLOUDINARY_URL=cloudinary://697513279767123:uE1QfcNNLJniX_6IlexfU72420g@dsosczr7j
+# Cấu hình cho môi trường lưu trữ hình với Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_URL=
+# TinyMCE API Key cho React App
+REACT_APP_TINYMCE_API_KEY=
 
-REACT_APP_TINYMCE_API_KEY=8t813kgqzmwjgis1zt15s0ez32c6qagtx9ikfwwfusk0nj9j
-
-EMAIL_USER=miatomo004@gmail.com
-
-EMAIL_PASS=ksea qcnw dedk walt # Mật khẩu ứng dụng 16 ký tự từ Gmail
-
+# Cấu hình Email (Mật khẩu ứng dụng 16 ký tự từ Gmail)
+EMAIL_USER=
+EMAIL_PASS=
 
 # Cấu hình môi trường (production hoặc development)
 NODE_ENV=production
